RESOLVED FIXED34776
Netscape plug-ins are not instantiated on property access if there are pending stylesheets
https://bugs.webkit.org/show_bug.cgi?id=34776
Summary Netscape plug-ins are not instantiated on property access if there are pendin...
mitz
Reported 2010-02-09 13:00:55 PST
<rdar://problem/7400160> Trying to access a property of a plug-in element will not instantiate the plug-in if a renderer hasn’t been created for it yet and there are pending style sheets. Patch forthcoming.
Attachments
Patch (6.28 KB, patch)
2010-02-09 14:19 PST, mitz
mitz: review+
mitz
Comment 1 2010-02-09 14:19:27 PST
Created attachment 48440 [details] Patch Anders reviewed this patch
mitz
Comment 2 2010-02-09 14:24:15 PST
Note You need to log in before you can comment on or make changes to this bug.