<rdar://problem/7400160> Netscape plug-ins are not instantiated on property access if there are pending stylesheets https://bugs.webkit.org/show_bug.cgi?id=34776

Reviewed by Anders Carlsson.

WebCore:

Tests: plugins/instance-available-before-stylesheets-loaded-object.html
       plugins/instance-available-before-stylesheets-loaded.html

* html/HTMLEmbedElement.cpp:
(WebCore::HTMLEmbedElement::renderWidgetForJSBindings): Call
updateLayoutIgnorePendingStylesheets() before checking for a renderer.
* html/HTMLObjectElement.cpp:
(WebCore::HTMLObjectElement::renderWidgetForJSBindings): Ditto.

LayoutTests:

* plugins/instance-available-before-stylesheets-loaded-expected.txt: Added.
* plugins/instance-available-before-stylesheets-loaded-object-expected.txt: Added.
* plugins/instance-available-before-stylesheets-loaded-object.html: Added.
* plugins/instance-available-before-stylesheets-loaded.html: Added.



Canonical link: https://commits.webkit.org/45880@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@54567 268f45cc-cd09-0410-ab3c-d52691b4dbfc